# apktool-py

./: README.md  pyproject.toml
.github/workflows/: check-apktool-updates.yml  python-publish.yml
apktool/: __init__.py  __main__.py  apktool.py
