[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "apktool-py"
authors = [
  { name="ego-lay-atman-bay" },
]
description = "Apktool wrapper for python."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/ego-lay-atman-bay/apktool-py/"
"Bug Tracker" = "https://github.com/ego-lay-atman-bay/apktool-py/issues/"
"Apktool" = "https://https://apktool.org/"

[tool.setuptools.dynamic]
version = { attr = "apktool.__version__" }

[tool.setuptools.package-data]
"apktool" = ["*.jar"]

[project.scripts]
apktool = "apktool:__main__.main"
